--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
-  "name": "GitHub Actions (JavaScript)",
-  "image": "mcr.microsoft.com/devcontainers/javascript-node:20",
+  "name": "GitHub Actions (TypeScript)",
+  "image": "mcr.microsoft.com/devcontainers/typescript-node:20",
   "postCreateCommand": "npm install",
   "customizations": {
     "codespaces": {
