--- a/action.yml
+++ b/action.yml
@@ -2,6 +2,11 @@ name: 'The name of your action here'
 description: 'Provide a description here'
 author: 'Your name or organization here'
 
+# Add your action's branding here. This will appear on the GitHub Marketplace.
+branding:
+  icon: 'heart'
+  color: 'red'
+
 # Define your inputs here.
 inputs:
   milliseconds:
